# secu_si

./: Amuaire_bdd.db  Auth_bdd.db  README.md  creation_table.sql  docker-compose.yml  infoBDD.txt  main.py  pyproject.toml  test.py
amuaire/: .env  package-lock.json  package.json
amuaire/auth/: server.js
amuaire/auth/public/: login.css  login.js  register.css  register.js
amuaire/auth/views/: login.html  register.html
amuaire/backend/backend/: JWTmiddleware.py  asgi.py  settings.py  urls.py  wsgi.py
amuaire/backend/server/: models.py  serializers.py  views.py
amuaire/frontend/: angular.json  package-lock.json  package.json
amuaire/frontend/src/: proxy.conf.json
amuaire/frontend/src/app/: app.component.html  app.config.ts  app.module.ts  app.routes.ts  auth.guard.ts
amuaire/frontend/src/app/add-user/: add-user.component.html  add-user.component.ts
amuaire/frontend/src/app/home-admin/: home-admin.component.css  home-admin.component.html  home-admin.component.ts
amuaire/frontend/src/app/home-user/: home-user.component.css  home-user.component.html  home-user.component.ts
amuaire/frontend/src/app/modify-admin/: modify-admin.component.css  modify-admin.component.html  modify-admin.component.spec.ts  modify-admin.component.ts
amuaire/frontend/src/app/modify-profil/: modify-profil.component.html  modify-profil.component.spec.ts  modify-profil.component.ts
amuaire/frontend/src/app/modify-user/: modify-user.component.css  modify-user.component.html  modify-user.component.ts
example/: functions.py
(+7 files in other folders)
